# steam-box-client

./: .gitignore
.github/workflows/: build.yml  windows-build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/src/: commands.rs  crypto.rs  lib.rs  main.rs  steam.rs
