[package]
name = "steam-box-client"
version = "1.0.0"
edition = "2021"
description = "Steam Box - Game Unlock Tool"
authors = ["SteamBox"]

[lib]
name = "steam_box_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
rand = "0.8"
hostname = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
wmi = "0.14"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
